fix : password validation messages visibility

--- a/monument-art-store/clientApp/src/app/components/login/login.component.css
+++ b/monument-art-store/clientApp/src/app/components/login/login.component.css
@@ -15,6 +15,7 @@
 
 .invalid-feedback {
     background: #ffffff;
+    padding-left: 5px;
 }
 
 .card-body {
